changement de lien website

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.example.com</span>
+                      <strong>Website:</strong>
+                      <span>https://portfoflio-eight.vercel.app/</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
