--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             Je suis
             <span
               class="typed"
-              data-typed-items="Developpeur Junior, Freelancer"
+              data-typed-items="Développeur Junior, Freelancer"
               >Freelancer</span
             ><span
               class="typed-cursor typed-cursor--blink"
@@ -150,7 +150,7 @@
               />
             </div>
             <div class="col-lg-8 content">
-              <h2>Developpeur Junior &amp; Freelancer.</h2>
+              <h2>Développeur Junior &amp; Freelancer.</h2>
 
               <div class="row">
                 <div class="col-lg-6">
@@ -167,7 +167,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Telephone:</strong> <span>+261 33 25 394 61</span>
+                      <strong>Téléphone:</strong> <span>+261 33 25 394 61</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -180,7 +180,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Diplome:</strong> <span>Master</span>
+                      <strong>Diplôme:</strong> <span>Master 2</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -357,8 +357,8 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Curriculum Vitae</h2>
           <p>
-            Cette partie resume toutes mes experiences professionnelles et
-            académiques.
+            Cette partie résume toutes mes expériences professionnelles et
+            Académiques.
           </p>
         </div>
         <!-- End Section Title -->
@@ -366,7 +366,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title">Resume</h3>
+              <h3 class="resume-title">Résumé</h3>
 
               <div class="resume-item pb-0">
                 <h4>NOMENJANAHARY MAMIANDRIAMIHAJA Gennerat Philippe</h4>
