suite sur la correction d'orthographe

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               </div>
               <!-- Edn Resume Item -->
 
-              <h3 class="resume-title">Education</h3>
+              <h3 class="resume-title">Éducation</h3>
               <div class="resume-item">
                 <h4>Master II en Informatique</h4>
                 <h5>2022 - 2023</h5>
@@ -425,16 +425,16 @@
                   text-decoration: none;
                 "
               >
-                📄 Telecharger CV
+                📄 Télécharger mon CV
               </a>
 
               <!-- Edn Resume Item -->
             </div>
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="resume-title">Expérience Professionnelle</h3>
+              <h3 class="resume-title">Expériences Professionnelles</h3>
               <div class="resume-item">
-                <h4>Developpeur Frontend</h4>
+                <h4>Développeur Frontend</h4>
                 <h5>Janvier 2025 - Mai 2025</h5>
                 <p><em>EXALIA, Suisse(Remote)</em></p>
                 <ul>
