delete the a link on section service

--- a/index.html
+++ b/index.html
@@ -523,9 +523,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
-                    >Microsoft Azure</a
-                  >
+                  <p>Microsoft Azure</p>
                 </h4>
                 <p class="description">
                   Utilisation de services cloud pour l’hébergement, la gestion
@@ -546,9 +544,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
-                    >cPanel</a
-                  >
+                  <p>cPanel</p>
                 </h4>
                 <p class="description">
                   Déploiement et gestion d’applications web, configuration de
@@ -568,9 +564,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link"
-                    >GoDaddy</a
-                  >
+                  <p>GoDaddy</p>
                 </h4>
                 <p class="description">
                   Gestion de noms de domaine, configuration DNS et hébergement
@@ -590,7 +584,7 @@
               </div>
               <div>
                 <h4 class="title">
-                  <a href="service-details.html" class="stretched-link">Wix</a>
+                  <p>Wix</p>
                 </h4>
                 <p class="description">
                   Création et personnalisation de sites vitrines, intégration de
