--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -110,7 +110,7 @@
             Je suis
             <span
               class="typed"
-              data-typed-items="Développeur Junior, Freelancer"
+              data-typed-items="Développeur FullStack Junior, Freelancer"
               >Freelancer</span
             ><span
               class="typed-cursor typed-cursor--blink"
@@ -150,7 +150,7 @@
               />
             </div>
             <div class="col-lg-8 content">
-              <h2>Développeur Junior &amp; Freelancer.</h2>
+              <h2>Développeur FullStack Junior &amp; Freelancer.</h2>
 
               <div class="row">
                 <div class="col-lg-6">
@@ -163,7 +163,12 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Website:</strong>
-                      <span>https://portfoflio-eight.vercel.app/</span>
+                      <span
+                        ><link
+                          rel="stylesheet"
+                          href="https://portfoflio-eight.vercel.app"
+                        />https://portfoflio-eight.vercel.app</span
+                      >
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -251,7 +256,7 @@
               </div>
               <div class="progress">
                 <span class="skill"
-                  ><span>ReactJs/ React Native</span>
+                  ><span>ReactJs | React Native | Next.js </span>
                   <i class="val">90%</i></span
                 >
                 <div class="progress-bar-wrap">
@@ -302,7 +307,8 @@
 
               <div class="progress">
                 <span class="skill"
-                  ><span>ExpressJs/NestJs</span> <i class="val">90%</i></span
+                  ><span>Express.js | Nest.js</span>
+                  <i class="val">90%</i></span
                 >
                 <div class="progress-bar-wrap">
                   <div
@@ -442,7 +448,7 @@
                     Maintenance du site jobcair.fr : intégration d’un système de
                     réservation de navette (choix des trajets, forfaits,
                     date,...).et ajout des nouvelles fonctionnalités avec
-                    ReactJS, TailwindCSS, Zunstand
+                    ReactJS, TailwindCSS, Zustand
                   </li>
                 </ul>
               </div>
